--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,19 @@
     <body>
         <header>
             <h1>Modul 323 - Index Cards</h1>
+            <nav>
+                <a href="./Test/index.html">Test</a>
+            </nav>
         </header>
         <hr>
+        <fieldset>
+            <legend>How To:</legend>
+            <ul>
+                <li>When you hover over a card it reveals a card.</li>
+                <li>When the card is reveald you can choose if you got the answer or failed</li>
+                <li></li>
+              </ul>
+        </fieldset>
         <main id="app"></main>
         <hr>
         <footer>
