--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <fieldset>
             <legend>How To:</legend>
             <ul>
-                <li>When you hover over a card it reveals a card.</li>
+                <li>When you hover over a card it reveals The Solution.</li>
                 <li>When the card is reveald you can choose if you got the answer or failed</li>
                 <li></li>
               </ul>
