--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
                 <li>When you click "Show Solution" in a card, it reveals The Solution.</li>
                 <li>When the card is reveald you can choose if you got the answer or failed</li>
                 <li>To create a new index card, click "Add A Indexcard". then go to that card and click "Edit" to change its content</li>
+                <li>when you change a card you need to press enter or your changes will be ignored.</li>
               </ul>
         </fieldset>
         <main id="app"></main>
